# es-editor

./: .env  .env.development  .env.production  .env.secret.template  .env.template  .gitignore  README.md  dev.Dockerfile  docker-compose.yaml  docker-compose.yml  gitclone.Dockerfile  package.json  prod.Dockerfile
.github/workflows/: backend-pytest.yml  docker-image.yml  frontend-build-check.yml
backend/: .env.template  app.py  db.py  dev.Dockerfile  login.py  oauth.py  prod.Dockerfile  pyproject.toml  regest.py  requirements.txt  setup.cfg  setup.py
backend/flaskr/: .env.template  __init__.py  auth.py  config.py  model.py  models.py  test.py
backend/flaskr/rest_api/: company.py  document.py  document_history.py  merge.py  tag.py
backend/flaskr/utils/: client_hash.py  client_uuid.py  random_id.py
backend/tests/: __init__.py  conftest.py  document.py  test_common.py  test_company.py  test_document.py  test_merge.py  test_tag.py
db/: Dockerfile  docker-entrypoint-initdb.sql
dev_docker/: docker-compose.yml
frontend/: .env.development  .env.production  .eslintrc.json  .gitignore  dev.Dockerfile  docker-compose.yml  next-sitemap.js  package.json  prod.Dockerfile
frontend/src/components/: EditItemList.tsx  Footer.tsx  Header.tsx  Sidebar.tsx  TermCreateSelect.tsx  TermSelect.tsx
frontend/src/components/uiParts/: RelatedDocumentMark.module.scss  RelatedDocumentMark.tsx
frontend/src/consts/: default-value.ts  key.ts  url.ts
frontend/src/interfaces/: interfaces.ts
frontend/src/pages/: _app.tsx  _document.tsx  debug.tsx  index.tsx  list.tsx  login.tsx
frontend/src/styles/: Debug.module.scss  Edit.module.scss  Header.module.scss  Home.module.scss  List.module.scss  Login.module.scss  Sidebar.module.scss  TermSelect.module.scss  _common.scss  globals.css
frontend/src/utils/: REST.tsx  cloud.ts  gtag.ts  storage.tsx  usePageView.ts  useUnsaveAlert.ts  utils.tsx  verify.ts
src/components/: EditItemList.tsx  Footer.tsx  Header.tsx  TermCreateSelect.tsx  TermSelect.tsx
src/consts/: default-value.ts  key.ts  local-storage.ts
src/interfaces/: interfaces.ts
src/pages/: _app.tsx  index.tsx  list.tsx
src/pages/edit/: [documentId].tsx  index.tsx
src/styles/: Edit.module.scss  EditItemList.module.scss  Footer.module.scss  Header.module.scss  Home.module.scss  List.module.scss  TermSelect.module.scss  _common.scss  globals.css
src/utils/: REST.tsx
(+2 files in other folders)
