[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kajikentaro <kajindowsxp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flask = "2.1.2"
flask-sqlalchemy = "2.5.1"
waitress = "2.1.2"
Flask-Login = "0.6.1"
Werkzeug = "2.1.2"
flask-marshmallow = "0.14.0"
SQLAlchemy = "1.4.39"
requests = "2.28.1"
oauthlib = "3.2.0"
marshmallow = "3.17.0"
marshmallow-sqlalchemy = "0.28.0"
pymysql = "1.0.2"
Flask-Cors = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"