[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kajikentaro <kajindowsxp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.7"
flask = "~2.2.5"
flask-sqlalchemy = "~3.0.5"
waitress = "~2.1.2"
Flask-Login = "~0.6.3"
flask-marshmallow = "~0.15.0"
SQLAlchemy = "~2.0.23"
requests = "~2.31.0"
oauthlib = "~3.2.2"
marshmallow-sqlalchemy = "~0.29.0"
pymysql = "~1.1.0"
Flask-Cors = "~4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"