[metadata]
name = flaskr
version = 1.0.0

[options]
packages = find:
include_package_data = true
install_requires =
    requests
    Flask
    oauthlib
    pyOpenSSL
    Flask-Login
    flask-cors

    flask_sqlalchemy
    pymysql

    marshmallow
    marshmallow-sqlalchemy
    flask-marshmallow

    black
    flake8
    
    pytest

    flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr
    
[flake8]
max-line-length = 88